--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,12 +1,16 @@
 FROM ros:jazzy
 
+ENV ROS_DISTRO=jazzy
+
 RUN apt-get update && \
     apt-get install -y nano && \
     rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update \
-  && apt-get install -y curl && \
+RUN apt-get update &&\
+    apt-get install -y curl && \
     rm -rf /var/lib/apt/lists/*
+
+RUN . /opt/ros/$ROS_DISTRO/setup.sh 
 
 #The ros jazzy image has a default user named "ubuntu"    
 ARG USERNAME=ubuntu
@@ -15,5 +19,7 @@ ARG USERNAME=ubuntu
 RUN echo "ubuntu:pwd" | chpasswd
 # [Optional] Set the default user. Omit if you want to keep the default as root.
 USER $USERNAME
+
+
 
 
