Writing the basic dijikstra functionality. Have not done major functions

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,19 +6,12 @@ RUN apt-get update && \
     apt-get install -y nano && \
     rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update &&\
+RUN apt-get update && \
     apt-get install -y curl && \
-    rm -rf /var/lib/apt/lists/*
-
-RUN apt-get install bash-completion
-
-RUN apt-get install git
+    apt-get install bash-completion -y && \
+    rm -rf /var/lib/apt/lists/* 
 
 RUN . /opt/ros/$ROS_DISTRO/setup.sh 
-
-RUN curl https://raw.githubusercontent.com/git/git/v2.41.0/contrib/completion/git-completion.bash \
-    -o /etc/bash_completion.d/.git-completion.bash \
-    echo 'source /etc/bash_completion.d/.git-completion.bash' >> ~/.bashrc
 
 #The ros jazzy image has a default user named "ubuntu"    
 ARG USERNAME=ubuntu
