--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "editor.rulers": [
         100
     ],
+    "editor.formatOnSave": true,
     "files.associations": {
         "*.repos": "yaml",
         "*.world": "xml",
