Worked out clang format

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,8 @@ ENV ROS_DISTRO=jazzy
 
 RUN apt-get update && \
     apt-get install -y nano && \
+    apt install python3-pip && \
+    apt install python3-colcon-clean && \
     rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update && \
@@ -13,6 +15,12 @@ RUN apt-get update && \
 
 RUN apt-get update && \
     apt-get install -y openssh-client && \
+    rm -rf /var/lib/apt/lists/* 
+
+RUN apt-get update && \
+    apt install software-properties-common && \
+    add-apt-repository universe && \
+    apt install ros-jazzy-ament-cmake-clang-format && \
     rm -rf /var/lib/apt/lists/* 
 
 RUN . /opt/ros/$ROS_DISTRO/setup.sh 
