--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,11 +90,13 @@
         "--max-line-length=100"
     ],
     "C_Cpp.default.intelliSenseMode": "linux-gcc-x86",
-    "C_Cpp.formatting": "disabled",
-    "uncrustify.configPath.linux": "/opt/ros/jazzy/lib/python3.12/site-packages/ament_uncrustify/configuration/ament_code_style_0_78.cfg",
-    "[cpp]": {
-        "editor.defaultFormatter": "zachflower.uncrustify"
-    },
+    // "C_Cpp.clang_format_style": "file",
+    // "[c]": {
+    //     "editor.defaultFormatter": "ms-vscode.cpptools"
+    // },
+    // "[cpp]": {
+    //     "editor.defaultFormatter": "ms-vscode.cpptools"
+    // },
     "search.exclude": {
         "**/node_modules": true,
         "**/bower_components": true,
