--- a/src/basic_dijikstra/package.xml
+++ b/src/basic_dijikstra/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>basic_dijikstra</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Implementation of Dijikstra algorithm for effcientcy testing</description>
   <maintainer email="aiirobotics@protonmail.com">ubuntu</maintainer>
   <license>MIT</license>
 
@@ -11,8 +11,10 @@
 
   <test_depend>ament_cmake_gtest</test_depend>
   <test_depend>ament_cmake_glog</test_depend>
+  
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_clang_format</test_depend>
+  <test_depend>ament_cmake_clang_tidy</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
